# template-rs-axclap

./: .example.env  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  QUICKREAD.md  README.md  cargo-generate.toml  docker-compose.yml
.config/: default.config.toml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: clippy.yml  crates.yml  docker.yml  ghcr.yml  release.yml  rust.yml
app/: Cargo.toml
app/src/: channels.rs  commands.rs  context.rs  main.rs  settings.rs  states.rs
app/src/api/: mod.rs
app/src/api/routes/: assets.rs  mod.rs
app/src/cli/: commands.rs
app/src/cli/args/: accounts.rs  mod.rs  system.rs
examples/: sand.rs
scripts/: setup.sh
src/: error.rs  lib.rs  macros.rs  main.rs  platform.rs  settings.rs  states.rs
src/cli/: cmd.rs  commands.rs  interface.rs  mod.rs
src/cli/cmd/: build.rs  deploy.rs  serve.rs
src/config/: mod.rs  settings.rs
src/config/kinds/: database.rs  network.rs  scope.rs  services.rs  tracing.rs  workspace.rs
src/config/types/: dblink.rs  log_level.rs  mode.rs  netaddr.rs
src/core/: interface.rs  mod.rs  primitives.rs
src/core/cli/: args.rs  cmds.rs  mod.rs
src/macros/: fmt.rs  getter.rs  setters.rs
src/platform/: context.rs  initializer.rs  state.rs
src/traits/: action.rs  context.rs  data.rs  mod.rs
src/workers/: builder.rs  mod.rs
src/workers/builder/: config.rs  context.rs
src/workers/serve/: config.rs  context.rs  mod.rs  server.rs  state.rs  utils.rs
tests/: platform.rs
xtask/: Cargo.toml
