[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
build = "build.rs"
categories = ["command-line-utilities", "networking"]
description = "A production ready server optimized for WASM applications"
default-run = "templated"
edition = "2021"
homepage = "https://github.com/FL03/template-rs-bin/wiki"
keywords = ["application", "cli", "server", "wasm"]
license = "Apache-2.0"
name = "template-rs-bin"
readme = "README.md"
repository = "https://github.com/FL03/template-rs-bin.git"
version = "0.0.0"

[[bin]]
bench = false
doctest = false
name = "templated"
path = "bin/server.rs"
test = false

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = true
test = true

# ********* [FF] Features *********
[features]
default = ["http1"]

full = ["default"]

# ********* [FF] Depenencies *********
cookie = ["axum-extra/cookie"]

http1 = ["axum/http1", "hyper/http1"]

http2 = ["axum/http2", "hyper/http2"]

ws = ["axum/ws"]

# ********* Dependencies *********
[build-dependencies]

[dev-dependencies]

[dependencies]
scsys = { default-features = false, features = ["derive", "serde", "json", "time"], version = "0.2.4" }

# config
config = { version = "0.15" }
# errors
anyhow = { version = "1" }
thiserror = { version = "2" }
# time
chrono = { version = "0.4" }
# api
axum = { features = ["macros"], version = "0.8" }
axum-extra = { features = ["tracing"], version = "0.10.1" }
hyper = { version = "1" }
hyper-util = { features = ["server", "service"], version = "0.1" }
tower = { features = ["full"], version = "0.5" }
# cli
clap = { features = ["derive", "env"], version = "4" }
# data & serialization
bytes = { version = "1" }
serde = { features = ["derive"], version = "1" }
serde_json = { version = "1" }
smart-default = { version = "0.7" }
strum = { features = ["derive"], version = "0.27" }
# async
async-session = { version = "3" }
async-trait = { version = "0.1" }
tokio = { features = ["full"], version = "1" }
tokio-util = { features = ["rt"], version = "0.7" }
# tracing
tracing = { features = ["log"], version = "0.1" }
tracing-subscriber = { features = ["env-filter", "fmt", "json"], version = "0.3" }
# misc
lazy_static = { version = "1" }
paste = { version = "1" }
url = { version = "2" }
uuid = { features = ["fast-rng", "serde", "v4"], version = "1" }

[dependencies.tower-http]
features = ["compression-full", "fs", "sensitive-headers", "trace"]
version = "0.6"



[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

# ********* [profiles] *********
[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 'z'
overflow-checks = false
panic = 'abort'
rpath = false
