[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "template-bin-rs"
edition = "2021"
homepage = "https://github.com/FL03/template-bin-rs/wiki"
keywords = ["app", "binary", "clap", "cli", "template"]
license = "Apache-2.0"
name = "template-bin-rs"
repository = "https://github.com/FL03/template-bin-rs"
version = "0.1.0"

[[bin]]
bench = true
name = "app"
path = "src/main.rs"
test = true

[build-dependencies]

[dependencies]
acme = { features = ["net"], git = "https://github.com/FL03/acme", branch = "v0.2.5", version = "0.2.5" }
async-trait = "0.1.60"
axum = { features = ["headers", "http2", "macros"], version = "0.6.1" }
clap = { features = ["cargo", "derive", "env"], version = "4.0.29" }
futures = "0.3.25"
http = "0.2.8"
hyper = { features = ["full"], version = "0.14.23" }
scsys = { features = ["full"], version = "0.1.39" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
smart-default = "0.6.0"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["full"], version = "1.23.0" }
tower = "0.4.13"
tower-http = { features = ["full"], version = "0.3.5" }
tracing = "0.1.37"
tracing-subscriber = { features = ["env-filter"], version = "0.3.16" }

[dev-dependencies]

